@@ -1,7 +1,9 @@
 package se.sundsvall.supportmanagement.service.action;
 
+import java.time.Clock;
+import java.time.Instant;
 import java.time.OffsetDateTime;
-import java.time.temporal.ChronoUnit;
+import java.time.ZoneId;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
@@ -34,7 +36,6 @@ import se.sundsvall.supportmanagement.service.MetadataService;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
-import static org.assertj.core.api.Assertions.within;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.verifyNoMoreInteractions;
@@ -49,12 +50,23 @@ class SendEmailActionTest {
 	private static final String LABEL_ID_2 = "label-id-2";
 	private static final String STATUS_OPEN = "OPEN";
 	private static final String STATUS_CLOSED = "CLOSED";
+	private static final String ERRAND_ID = "errand-id";
+	private static final String RECIPIENT_ADDRESS = "recipient@test.com";
+	private static final String SENDER_ADDRESS = "sender@test.com";
+	private static final String EMAIL_SUBJECT = "Test subject";
+	private static final String EMAIL_BODY = "Test body";
+	private static final String ERRAND_BASE_URL = "https://support.sundsvall.se";
+	private static final Instant FIXED_INSTANT = Instant.parse("2026-06-05T10:00:00Z");
+	private static final ZoneId ZONE_ID = ZoneId.of("UTC");
 
 	@Mock
 	private MetadataService metadataService;
 
 	@Mock
 	private CommunicationService communicationService;
+
+	@Mock
+	private Clock clock;
 
 	@InjectMocks
 	private SendEmailAction sendEmailAction;
@@ -85,9 +97,9 @@ class SendEmailActionTest {
 		var result = sendEmailAction.getConditionDefinitions(MUNICIPALITY_ID, NAMESPACE);
 
 		assertThat(result).hasSize(2);
-		assertThat(result.get(0).getKey()).isEqualTo("status");
-		assertThat(result.get(0).getMandatory()).isFalse();
-		assertThat(result.get(0).getPossibleValues()).hasSize(2);
+		assertThat(result.getFirst().getKey()).isEqualTo("status");
+		assertThat(result.getFirst().getMandatory()).isFalse();
+		assertThat(result.getFirst().getPossibleValues()).hasSize(2);
 		assertThat(result.get(1).getKey()).isEqualTo("hasLabel");
 		assertThat(result.get(1).getMandatory()).isFalse();
 		assertThat(result.get(1).getPossibleValues()).hasSize(2);
@@ -101,9 +113,9 @@ class SendEmailActionTest {
 	void getParameterDefinitions() {
 		var result = sendEmailAction.getParameterDefinitions(MUNICIPALITY_ID, NAMESPACE);
 
-		assertThat(result).hasSize(6);
-		assertThat(result.get(0).getKey()).isEqualTo("recipient");
-		assertThat(result.get(0).getMandatory()).isTrue();
+		assertThat(result).hasSize(7);
+		assertThat(result.getFirst().getKey()).isEqualTo("recipient");
+		assertThat(result.getFirst().getMandatory()).isTrue();
 		assertThat(result.get(1).getKey()).isEqualTo("sender");
 		assertThat(result.get(1).getMandatory()).isTrue();
 		assertThat(result.get(2).getKey()).isEqualTo("subject");
@@ -113,8 +125,10 @@ class SendEmailActionTest {
 		assertThat(result.get(4).getKey()).isEqualTo("addLinkToErrandInBody");
 		assertThat(result.get(4).getMandatory()).isTrue();
 		assertThat(result.get(4).getPossibleValues()).hasSize(2);
-		assertThat(result.get(5).getKey()).isEqualTo("duration");
+		assertThat(result.get(5).getKey()).isEqualTo("baseUrl");
 		assertThat(result.get(5).getMandatory()).isFalse();
+		assertThat(result.get(6).getKey()).isEqualTo("duration");
+		assertThat(result.get(6).getMandatory()).isFalse();
 
 		verifyNoMoreInteractions(metadataService);
 	}
@@ -175,23 +189,25 @@ class SendEmailActionTest {
 	// validateParameters tests
 	@Test
 	void validateParametersWithValidDuration() {
-		sendEmailAction.validateParameters(MUNICIPALITY_ID, NAMESPACE, Map.of(
-			"recipient", List.of("test@test.com"),
-			"sender", List.of("sender@test.com"),
-			"subject", List.of("Test subject"),
-			"body", List.of("Test body"),
-			"addLinkToErrandInBody", List.of("true"),
-			"duration", List.of("PT1H")));
+		sendEmailAction.validateParameters(MUNICIPALITY_ID, NAMESPACE, createParameters(
+			"recipient", "test@test.com",
+			"sender", SENDER_ADDRESS,
+			"subject", EMAIL_SUBJECT,
+			"body", EMAIL_BODY,
+			"addLinkToErrandInBody", "true",
+			"baseUrl", ERRAND_BASE_URL,
+			"duration", "PT1H"));
 	}
 
 	@Test
 	void validateParametersWithAllValid() {
-		sendEmailAction.validateParameters(MUNICIPALITY_ID, NAMESPACE, Map.of(
-			"recipient", List.of("test@test.com"),
-			"sender", List.of("sender@test.com"),
-			"subject", List.of("Test subject"),
-			"body", List.of("Test body"),
-			"addLinkToErrandInBody", List.of("true")));
+		sendEmailAction.validateParameters(MUNICIPALITY_ID, NAMESPACE, createParameters(
+			"recipient", "test@test.com",
+			"sender", SENDER_ADDRESS,
+			"subject", EMAIL_SUBJECT,
+			"body", EMAIL_BODY,
+			"addLinkToErrandInBody", "true",
+			"baseUrl", ERRAND_BASE_URL));
 	}
 
 	@ParameterizedTest
@@ -205,31 +221,34 @@ class SendEmailActionTest {
 	private static Stream<Arguments> invalidParametersProvider() {
 		return Stream.of(
 			Arguments.of(
-				createParameters("recipient", "test@test.com", "sender", "sender@test.com", "subject", "Test subject", "body", "Test body", "addLinkToErrandInBody", "true", "invalidKey", "value"),
+				createParameters("recipient", "test@test.com", "sender", SENDER_ADDRESS, "subject", EMAIL_SUBJECT, "body", EMAIL_BODY, "addLinkToErrandInBody", "true", "invalidKey", "value"),
 				"Key 'invalidKey' is not valid"),
 			Arguments.of(
-				Map.of("sender", List.of("sender@test.com"), "subject", List.of("Test subject"), "body", List.of("Test body"), "addLinkToErrandInBody", List.of("true")),
+				Map.of("sender", List.of(SENDER_ADDRESS), "subject", List.of(EMAIL_SUBJECT), "body", List.of(EMAIL_BODY), "addLinkToErrandInBody", List.of("true")),
 				"Key 'recipient' is mandatory and cannot be empty"),
 			Arguments.of(
-				Map.of("recipient", List.of("test@test.com"), "subject", List.of("Test subject"), "body", List.of("Test body"), "addLinkToErrandInBody", List.of("true")),
+				Map.of("recipient", List.of("test@test.com"), "subject", List.of(EMAIL_SUBJECT), "body", List.of(EMAIL_BODY), "addLinkToErrandInBody", List.of("true")),
 				"Key 'sender' is mandatory and cannot be empty"),
 			Arguments.of(
-				Map.of("recipient", List.of("test@test.com"), "sender", List.of("sender@test.com"), "body", List.of("Test body"), "addLinkToErrandInBody", List.of("true")),
+				Map.of("recipient", List.of("test@test.com"), "sender", List.of(SENDER_ADDRESS), "body", List.of(EMAIL_BODY), "addLinkToErrandInBody", List.of("true")),
 				"Key 'subject' is mandatory and cannot be empty"),
 			Arguments.of(
-				Map.of("recipient", List.of("test@test.com"), "sender", List.of("sender@test.com"), "subject", List.of("Test subject"), "addLinkToErrandInBody", List.of("true")),
+				Map.of("recipient", List.of("test@test.com"), "sender", List.of(SENDER_ADDRESS), "subject", List.of(EMAIL_SUBJECT), "addLinkToErrandInBody", List.of("true")),
 				"Key 'body' is mandatory and cannot be empty"),
 			Arguments.of(
-				Map.of("recipient", List.of("test@test.com"), "sender", List.of("sender@test.com"), "subject", List.of("Test subject"), "body", List.of("Test body")),
+				Map.of("recipient", List.of("test@test.com"), "sender", List.of(SENDER_ADDRESS), "subject", List.of(EMAIL_SUBJECT), "body", List.of(EMAIL_BODY)),
 				"Key 'addLinkToErrandInBody' is mandatory and cannot be empty"),
 			Arguments.of(
-				Map.of("recipient", List.of("test1@test.com", "test2@test.com"), "sender", List.of("sender@test.com"), "subject", List.of("Test subject"), "body", List.of("Test body"), "addLinkToErrandInBody", List.of("true")),
+				Map.of("recipient", List.of("test1@test.com", "test2@test.com"), "sender", List.of(SENDER_ADDRESS), "subject", List.of(EMAIL_SUBJECT), "body", List.of(EMAIL_BODY), "addLinkToErrandInBody", List.of("true")),
 				"Cannot handle multiple values of key 'recipient'"),
 			Arguments.of(
-				Map.of("recipient", List.of("test@test.com"), "sender", List.of("sender@test.com"), "subject", List.of("Test subject"), "body", List.of("Test body"), "addLinkToErrandInBody", List.of("notABoolean")),
+				Map.of("recipient", List.of("test@test.com"), "sender", List.of(SENDER_ADDRESS), "subject", List.of(EMAIL_SUBJECT), "body", List.of(EMAIL_BODY), "addLinkToErrandInBody", List.of("notABoolean")),
 				"Value 'notABoolean' is not valid for key 'addLinkToErrandInBody'"),
 			Arguments.of(
-				createParameters("recipient", "test@test.com", "sender", "sender@test.com", "subject", "Test subject", "body", "Test body", "addLinkToErrandInBody", "true", "duration", "not-a-duration"),
+				createParameters("recipient", "test@test.com", "sender", SENDER_ADDRESS, "subject", EMAIL_SUBJECT, "body", EMAIL_BODY, "addLinkToErrandInBody", "true"),
+				"Key 'baseUrl' is required when 'addLinkToErrandInBody' is true"),
+			Arguments.of(
+				createParameters("recipient", "test@test.com", "sender", SENDER_ADDRESS, "subject", EMAIL_SUBJECT, "body", EMAIL_BODY, "addLinkToErrandInBody", "true", "baseUrl", ERRAND_BASE_URL, "duration", "not-a-duration"),
 				"Could not parse duration 'not-a-duration'"));
 	}
 
@@ -244,14 +263,25 @@ class SendEmailActionTest {
 	// actionFulfilled tests
 
 	@Test
-	void actionFulfilledAlwaysReturnsTrue() {
-		var errand = ErrandEntity.create();
-		assertThat(sendEmailAction.actionFulfilled(errand, Map.of())).isTrue();
+	void actionFulfilledAlwaysReturnsFalse() {
+		var errand = ErrandEntity.create()
+			.withMunicipalityId(MUNICIPALITY_ID)
+			.withNamespace(NAMESPACE)
+			.withId(ERRAND_ID);
+
+		assertThat(sendEmailAction.actionFulfilled(errand, Map.of(
+			"recipient", List.of(RECIPIENT_ADDRESS),
+			"sender", List.of(SENDER_ADDRESS),
+			"subject", List.of(EMAIL_SUBJECT),
+			"body", List.of(EMAIL_BODY)))).isFalse();
 	}
 
 	// createAction tests
 	@Test
 	void createActionWhenConditionsMet() {
+		when(clock.instant()).thenReturn(FIXED_INSTANT);
+		when(clock.getZone()).thenReturn(ZONE_ID);
+
 		var errand = ErrandEntity.create()
 			.withStatus(STATUS_OPEN)
 			.withLabels(List.of(ErrandLabelEmbeddable.create().withMetadataLabelId(LABEL_ID_1)));
@@ -268,14 +298,15 @@ class SendEmailActionTest {
 		assertThat(result).isPresent();
 		assertThat(result.get().getActionConfigEntity()).isEqualTo(config);
 		assertThat(result.get().getErrandEntity()).isEqualTo(errand);
-		assertThat(result.get().getExecuteAfter()).isCloseTo(OffsetDateTime.now(), within(5, ChronoUnit.SECONDS));
+		assertThat(result.get().getExecuteAfter()).isEqualTo(OffsetDateTime.ofInstant(FIXED_INSTANT, ZONE_ID));
 	}
 
 	@Test
 	void createActionWithDuration() {
-		var errand = ErrandEntity.create()
-			.withStatus(STATUS_OPEN)
-			.withLabels(List.of());
+		when(clock.instant()).thenReturn(FIXED_INSTANT);
+		when(clock.getZone()).thenReturn(ZONE_ID);
+
+		var errand = ErrandEntity.create();
 
 		var config = ActionConfigEntity.create()
 			.withActive(true);
@@ -286,15 +317,15 @@ class SendEmailActionTest {
 		var result = sendEmailAction.createAction(errand, config);
 
 		assertThat(result).isPresent();
-		assertThat(result.get().getExecuteAfter()).isCloseTo(OffsetDateTime.now().plusHours(2), within(5, ChronoUnit.SECONDS));
+		assertThat(result.get().getExecuteAfter()).isEqualTo(OffsetDateTime.ofInstant(FIXED_INSTANT, ZONE_ID).plusHours(2));
 	}
 
 	@Test
 	void createActionWithoutDuration() {
-		var errand = ErrandEntity.create()
-			.withStatus(STATUS_OPEN)
-			.withLabels(List.of());
+		when(clock.instant()).thenReturn(FIXED_INSTANT);
+		when(clock.getZone()).thenReturn(ZONE_ID);
 
+		var errand = ErrandEntity.create();
 		var config = ActionConfigEntity.create()
 			.withActive(true);
 		config.setConditions(new ArrayList<>());
@@ -303,7 +334,7 @@ class SendEmailActionTest {
 		var result = sendEmailAction.createAction(errand, config);
 
 		assertThat(result).isPresent();
-		assertThat(result.get().getExecuteAfter()).isCloseTo(OffsetDateTime.now(), within(5, ChronoUnit.SECONDS));
+		assertThat(result.get().getExecuteAfter()).isEqualTo(OffsetDateTime.ofInstant(FIXED_INSTANT, ZONE_ID));
 	}
 
 	@Test
@@ -364,42 +395,51 @@ class SendEmailActionTest {
 
 		var config = ActionConfigEntity.create();
 		config.setParameters(new ArrayList<>(List.of(
-			ActionConfigParameterEntity.create().withKey("recipient").withValues(List.of("recipient@test.com")),
-			ActionConfigParameterEntity.create().withKey("sender").withValues(List.of("sender@test.com")),
-			ActionConfigParameterEntity.create().withKey("subject").withValues(List.of("Test subject")),
-			ActionConfigParameterEntity.create().withKey("body").withValues(List.of("Test body")),
+			ActionConfigParameterEntity.create().withKey("recipient").withValues(List.of(RECIPIENT_ADDRESS)),
+			ActionConfigParameterEntity.create().withKey("sender").withValues(List.of(SENDER_ADDRESS)),
+			ActionConfigParameterEntity.create().withKey("subject").withValues(List.of(EMAIL_SUBJECT)),
+			ActionConfigParameterEntity.create().withKey("body").withValues(List.of(EMAIL_BODY)),
 			ActionConfigParameterEntity.create().withKey("addLinkToErrandInBody").withValues(List.of("false")))));
 
 		sendEmailAction.executeAction(errand, config);
 
 		verify(communicationService).sendEmail(eq(errand), emailRequestCaptor.capture());
 		var capturedRequest = emailRequestCaptor.getValue();
-		assertThat(capturedRequest.getRecipient()).isEqualTo("recipient@test.com");
-		assertThat(capturedRequest.getSender()).isEqualTo("sender@test.com");
-		assertThat(capturedRequest.getSubject()).isEqualTo("Test subject");
-		assertThat(capturedRequest.getMessage()).isEqualTo("Test body");
+		assertThat(capturedRequest.getRecipient()).isEqualTo(RECIPIENT_ADDRESS);
+		assertThat(capturedRequest.getSender()).isEqualTo(SENDER_ADDRESS);
+		assertThat(capturedRequest.getSubject()).isEqualTo(EMAIL_SUBJECT);
+		assertThat(capturedRequest.getMessage()).isEqualTo(EMAIL_BODY);
 		assertThat(capturedRequest.getHtmlMessage()).isNull();
 	}
 
 	@Test
 	void executeActionWithAddLinkToErrandInBody() {
-		var errand = ErrandEntity.create();
+		var errand = ErrandEntity.create()
+			.withId(ERRAND_ID)
+			.withMunicipalityId(MUNICIPALITY_ID)
+			.withNamespace(NAMESPACE)
+			.withStatus(STATUS_OPEN)
+			.withLabels(List.of());
 
-		var config = ActionConfigEntity.create();
+		var config = ActionConfigEntity.create()
+			.withActive(true);
+		config.setConditions(new ArrayList<>());
 		config.setParameters(new ArrayList<>(List.of(
-			ActionConfigParameterEntity.create().withKey("recipient").withValues(List.of("recipient@test.com")),
-			ActionConfigParameterEntity.create().withKey("sender").withValues(List.of("sender@test.com")),
-			ActionConfigParameterEntity.create().withKey("subject").withValues(List.of("Test subject")),
-			ActionConfigParameterEntity.create().withKey("body").withValues(List.of("Test body")),
-			ActionConfigParameterEntity.create().withKey("addLinkToErrandInBody").withValues(List.of("true")))));
+			ActionConfigParameterEntity.create().withKey("recipient").withValues(List.of(RECIPIENT_ADDRESS)),
+			ActionConfigParameterEntity.create().withKey("sender").withValues(List.of(SENDER_ADDRESS)),
+			ActionConfigParameterEntity.create().withKey("subject").withValues(List.of(EMAIL_SUBJECT)),
+			ActionConfigParameterEntity.create().withKey("body").withValues(List.of(EMAIL_BODY)),
+			ActionConfigParameterEntity.create().withKey("addLinkToErrandInBody").withValues(List.of("true")),
+			ActionConfigParameterEntity.create().withKey("baseUrl").withValues(List.of(ERRAND_BASE_URL)))));
 
 		sendEmailAction.executeAction(errand, config);
 
 		verify(communicationService).sendEmail(eq(errand), emailRequestCaptor.capture());
 		var capturedRequest = emailRequestCaptor.getValue();
-		assertThat(capturedRequest.getRecipient()).isEqualTo("recipient@test.com");
-		assertThat(capturedRequest.getSender()).isEqualTo("sender@test.com");
-		assertThat(capturedRequest.getSubject()).isEqualTo("Test subject");
+		assertThat(capturedRequest.getRecipient()).isEqualTo(RECIPIENT_ADDRESS);
+		assertThat(capturedRequest.getSender()).isEqualTo(SENDER_ADDRESS);
+		assertThat(capturedRequest.getSubject()).isEqualTo(EMAIL_SUBJECT);
+		assertThat(capturedRequest.getMessage()).isEqualTo(EMAIL_BODY + "\n\nLänk till ärendet: " + ERRAND_BASE_URL + "/errands/" + ERRAND_ID);
 	}
 
 	// validForOperationType tests
